--- a/style.css
+++ b/style.css
@@ -1,18 +1,207 @@
+@import url('https://fonts.cdnfonts.com/css/hero-new');
+
+body{
+    margin: 0;
+}
+
 .header{
     background-color: #1F2937;
     display: flex;
 }
 
-.logo, .nav{
-    color: #F9FAF8;
-}
-
 .logo{
     margin-right: auto;
     margin-left: 10%;
+    color: #F9FAF8;
+    font-family: "Hero New", sans-serif;
+    font-weight: bold;
+    font-size: 24px;
 }
 
 .navs{
+    display: flex;
+    align-items: center;
     margin-left: auto;
     margin-right: 10%;
+    color: #F9FAF8;
+    gap: 15px;
+    font-size: 18px;
+    color: #E5E7EB;
+    font-family: "Hero New", sans-serif;
 }
+
+.content1{
+    background-color: #1F2937;
+    padding: 80px 40px 80px 40px;
+    display: flex;
+	align-items: center;
+	justify-content: space-around;
+	gap: 10px;
+}
+
+.start{
+    color: #E5E7EB;
+	width: 500px;
+	flex: 0 1 auto;
+}
+
+.image-start{
+	height: 250px;
+	width: 450px;
+	flex: 0 0 auto;
+	object-fit: cover;
+}
+
+.main-heading{
+	font-size: 48px;
+	font-family: "Hero New", sans-serif;
+	font-weight: 800;
+	margin-block-start: 0.5em;
+	margin-block-end: 0.5em;
+}
+
+.main-subheading{
+	font-size: 18px;
+	color: #E5E7EB;
+	font-family: "Hero New", sans-serif;
+}
+
+.sign-btn{
+	background-color: #3882F6;
+	color: white;
+	font-family: sans-serif;
+	font-size: 18px;
+	font-weight: bold;
+	width: 120px;
+	height: 40px;
+	border-radius: 10px;
+	border: 0;
+	box-shadow: 0;
+}
+
+.content2{
+	background-color: #F9FAF8;
+	padding: 80px 40px 80px 40px;
+}
+
+.cards{
+	display: flex;
+	align-items: center;
+	gap: 15px;
+	justify-content: center;
+	gap: 60px;
+}
+
+.card{
+	width: 200px;
+	flex: 0 0 auto;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+.second-heading{
+	text-align: center;
+	padding-bottom: 30px;
+	font-size: 40px;
+	font-family: "Hero New", sans-serif;
+	color: #1F2937;
+	font-weight: 800;
+}
+
+.square-image{
+	height: 200px;
+	width: 200px;
+	object-fit: cover;
+	flex: 0 0 auto;
+	border-radius: 12px;
+	border: solid #3882F6 4px;
+}
+
+.image-caption{
+	color: #1F2937;
+	font-family: "Hero New", sans-serif;
+	text-align: center;
+}
+
+.content3{
+	background-color: #E5E7EB;
+	padding: 80px 80px 80px 80px;
+	display: flex;
+	justify-content: center;
+}
+
+.quote-section{
+	width: 800px;
+	flex: 0 0 auto;
+}
+
+.quote{
+	font-size: 36px;
+	font-weight: 300;
+	font-style: italic;
+	font-family: "Hero New", sans-serif;
+	color: #1F2937;
+}
+
+.quote-author{
+	color: #1F2937;
+    font-family: "Hero New", sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+	text-align: right;
+}
+
+.content4{
+	padding: 80px 40px 80px 40px;
+}
+
+
+.footer{
+	background-color: #1F2937;
+}
+
+.copyright{
+	margin: 0;
+	padding: 30px;
+	text-align: center;
+	color: #E5E7EB;
+	font-family: "Hero New", sans-serif;
+}
+
+.action-widget{
+	background-color: #3882F6;
+	padding: 50px 80px;
+	display: flex;
+	align-items: center;
+	border-radius: 10px;
+}
+
+.widget-heading{
+	color: #E5E7EB;
+	font-family: "Hero New", sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+	margin: 0;
+
+}
+
+.widget-subheading{
+	margin: 0;
+	color: #E5E7EB;
+}
+
+.widget-sign-btn{
+	background-color: #3882F6;
+	border-radius: 5px;
+	border: solid white 2px;
+	color: white;
+	font-family: "Hero New", sans-serif;
+	font-weight: bold;
+	margin-left: auto;
+	padding: 5px 25px;
+}
+
+/* .content2, .card, .cards{
+	border: solid green 2px;
+} */
